sidebar 수정, 페이지분리

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -133,6 +133,11 @@ table {
   border-spacing: 0;
 }
 
+body {
+  display: flex;
+}
+
 main {
-  margin-left: 260px;
+  width: 100%;
+  padding: 2rem 4rem;
 }
