--- a/client/src/components/organisms/sidebar/Sidebar.module.css
+++ b/client/src/components/organisms/sidebar/Sidebar.module.css
@@ -1,80 +1,33 @@
-.sidebar-container {
+.sidebar {
+  width: 280px;
+  height: 100vh;
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
   display: flex;
   flex-direction: column;
-  position: fixed;
-  left: 0;
-  width: 260px;
-  height: 100%;
-  background-color: #51617d;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-  z-index: 4;
+  justify-content: space-between;
+  transition: transform 0.3s ease;
+  z-index: 1;
 }
-
-.sidebar-head {
-  padding: 25px;
-  background-color: "#fff";
-}
-
 .logo {
-  width: 135px;
-  height: 42px;
-  margin-bottom: 35px;
-}
-
-.user-profile {
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 40px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0 3px;
+  color: #000;
 }
-
-.user-img {
-  width: 64px;
-  height: 64px;
-  border: 2px solid #f1f3f9;
-  border-radius: 50%;
-  overflow: hidden;
+.logo img {
+  margin-right: 10px;
 }
-
-.user-img svg {
-  width: 100%;
-  height: 100%;
+.menu-section {
+  margin-bottom: 40px;
 }
-
-.user-img img {
-  width: 100%;
-  height: 100%;
-}
-
-.user-text {
-  display: flex;
-  align-items: flex-end;
-  flex-direction: column;
-}
-
-.user-role {
-  color: #919bad;
+.menu-section h4 {
   font-size: 14px;
-  font-weight: 400;
-}
-
-.user-name {
-  color: #353d4b;
-  font-size: 18px;
-  font-weight: 400;
-}
-
-.user-name strong {
-  font-weight: 600;
-}
-
-.logout-button-wrap {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 10px;
-  padding: 0 3px;
-}
-
-.button-wrap {
-  padding: 15px 25px;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  color: #999;
 }
